de.agra.emf.modelfinder.use2ecore/src/de/agra/emf/modelfinder/use2ecore/USEParser.java
// Generated from USE.g4 by ANTLR 4.4

package de.agra.emf.modelfinder.use2ecore;

import org.eclipse.emf.ecore.EPackage;
import org.eclipse.emf.ecore.impl.*;
import org.eclipse.emf.ecore.EAttribute;
import org.eclipse.emf.ecore.EClass;
import org.eclipse.emf.ecore.EEnum;
import org.eclipse.emf.ecore.EEnumLiteral;
import org.eclipse.emf.ecore.EParameter;
import org.eclipse.emf.ecore.EcoreFactory;
import org.eclipse.emf.ecore.EcorePackage;
import org.eclipse.emf.ecore.EClassifier;
import org.eclipse.emf.ecore.EOperation;
import org.eclipse.emf.ecore.EReference;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class USEParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, MODEL=2, CLASS=3, ENUM=4, ABSTRACT=5, INHERIT=6, GT=7, MINUS=8, 
		DIV=9, AT=10, ATTR=11, DOUBLE=12, TICKS=13, OPS=14, ASSOCIATION=15, COMPOSITION=16, 
		AGGREGATION=17, ORDERED=18, BETWEEN=19, ROLE=20, CONSTR=21, CONTEXT=22, 
		BEGIN=23, END=24, INV=25, PRE=26, POST=27, IF=28, THEN=29, ELSE=30, ENDIF=31, 
		STAR=32, NUMBERSIGN=33, PLUS=34, ID=35, NUMBER=36, SEMICOLON=37, COMMA=38, 
		POINT=39, PIPE=40, LPAR=41, RPAR=42, LSBRAC=43, RSBRAC=44, LCBRAC=45, 
		RCBRAC=46, EQUALS=47, ASSIGN=48, WS=49, COMMENT=50;
	public static final String[] tokenNames = {
		"<INVALID>", "'@pre'", "'model'", "'class'", "'enum'", "'abstract'", "'<'", 
		"'>'", "'-'", "'/'", "'@'", "'attributes'", "':'", "'''", "'operations'", 
		"'association'", "'composition'", "'aggregation'", "'ordered'", "'between'", 
		"'role'", "'constraints'", "'context'", "'begin'", "'end'", "'inv'", "'pre'", 
		"'post'", "'if'", "'then'", "'else'", "'endif'", "'*'", "'#'", "'+'", 
		"ID", "NUMBER", "';'", "','", "'.'", "'|'", "'('", "')'", "'['", "']'", 
		"'{'", "'}'", "'='", "':='", "WS", "COMMENT"
	};
	public static final int
		RULE_spec = 0, RULE_enum_ = 1, RULE_enumLiteral = 2, RULE_class_ = 3, 
		RULE_attribute = 4, RULE_operation = 5, RULE_precondition = 6, RULE_postcondition = 7, 
		RULE_operationParameter = 8, RULE_association = 9, RULE_associationAttendee = 10, 
		RULE_associationDef = 11, RULE_constraints = 12, RULE_context = 13, RULE_plaintext = 14, 
		RULE_plaintext1 = 15, RULE_identifier = 16;
	public static final String[] ruleNames = {
		"spec", "enum_", "enumLiteral", "class_", "attribute", "operation", "precondition", 
		"postcondition", "operationParameter", "association", "associationAttendee", 
		"associationDef", "constraints", "context", "plaintext", "plaintext1", 
		"identifier"
	};

	@Override
	public String getGrammarFileName() { return "USE.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public USEParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class SpecContext extends ParserRuleContext {
		public EPackage pkg;
		public Token n;
		public List<Class_Context> class_() {
			return getRuleContexts(Class_Context.class);
		}
		public TerminalNode ID() { return getToken(USEParser.ID, 0); }
		public List<Enum_Context> enum_() {
			return getRuleContexts(Enum_Context.class);
		}
		public ConstraintsContext constraints(int i) {
			return getRuleContext(ConstraintsContext.class,i);
		}
		public Class_Context class_(int i) {
			return getRuleContext(Class_Context.class,i);
		}
		public Enum_Context enum_(int i) {
			return getRuleContext(Enum_Context.class,i);
		}
		public List<AssociationContext> association() {
			return getRuleContexts(AssociationContext.class);
		}
		public AssociationContext association(int i) {
			return getRuleContext(AssociationContext.class,i);
		}
		public List<ConstraintsContext> constraints() {
			return getRuleContexts(ConstraintsContext.class);
		}
		public TerminalNode MODEL() { return getToken(USEParser.MODEL, 0); }
		public SpecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_spec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof USEListener ) ((USEListener)listener).enterSpec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof USEListener ) ((USEListener)listener).exitSpec(this);
		}
	}

	public final SpecContext spec() throws RecognitionException {
		SpecContext _localctx = new SpecContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_spec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(34); match(MODEL);
			setState(35); ((SpecContext)_localctx).n = match(ID);

			((SpecContext)_localctx).pkg =  EcoreFactory.eINSTANCE.createEPackage();
			_localctx.pkg.setName(((SpecContext)_localctx).n.getText());
			_localctx.pkg.setNsPrefix(((SpecContext)_localctx).n.getText());
			_localctx.pkg.setNsURI(((SpecContext)_localctx).n.getText());

			setState(43);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CLASS) | (1L << ENUM) | (1L << ABSTRACT) | (1L << ASSOCIATION) | (1L << COMPOSITION) | (1L << AGGREGATION) | (1L << CONSTR))) != 0)) {
				{
				setState(41);
				switch (_input.LA(1)) {
				case ENUM:
					{
					setState(37); enum_(_localctx.pkg);
					}
					break;
				case CLASS:
				case ABSTRACT:
					{
					setState(38); class_(_localctx.pkg);
					}
					break;
				case ASSOCIATION:
				case COMPOSITION:
				case AGGREGATION:
					{
					setState(39); association(_localctx.pkg);
					}
					break;
				case CONSTR:
					{
					setState(40); constraints();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(45);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Enum_Context extends ParserRuleContext {
		public EPackage pkg;
		public Token n;
		public TerminalNode LCBRAC() { return getToken(USEParser.LCBRAC, 0); }
		public TerminalNode ID() { return getToken(USEParser.ID, 0); }
		public EnumLiteralContext enumLiteral(int i) {
			return getRuleContext(EnumLiteralContext.class,i);
		}
		public TerminalNode RCBRAC() { return getToken(USEParser.RCBRAC, 0); }
		public List<EnumLiteralContext> enumLiteral() {
			return getRuleContexts(EnumLiteralContext.class);
		}
		public TerminalNode ENUM() { return getToken(USEParser.ENUM, 0); }
		public List<TerminalNode> COMMA() { return getTokens(USEParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(USEParser.COMMA, i);
		}
		public Enum_Context(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public Enum_Context(ParserRuleContext parent, int invokingState, EPackage pkg) {
			super(parent, invokingState);
			this.pkg = pkg;
		}
		@Override public int getRuleIndex() { return RULE_enum_; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof USEListener ) ((USEListener)listener).enterEnum_(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof USEListener ) ((USEListener)listener).exitEnum_(this);
		}
	}

	public final Enum_Context enum_(EPackage pkg) throws RecognitionException {
		Enum_Context _localctx = new Enum_Context(_ctx, getState(), pkg);
		enterRule(_localctx, 2, RULE_enum_);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46); match(ENUM);
			setState(47); ((Enum_Context)_localctx).n = match(ID);

			    int value = 0;
			    EEnum eenum = EcoreFactory.eINSTANCE.createEEnum();
			    eenum.setName(((Enum_Context)_localctx).n.getText());

			setState(49); match(LCBRAC);
			setState(58);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(50); enumLiteral(eenum, value++);
				setState(55);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(51); match(COMMA);
					setState(52); enumLiteral(eenum, value++);
					}
					}
					setState(57);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(60); match(RCBRAC);

			    pkg.getEClassifiers().add(eenum);

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EnumLiteralContext extends ParserRuleContext {
		public EEnum eenum;
		public int value;
		public Token lit;
		public TerminalNode ID() { return getToken(USEParser.ID, 0); }
		public EnumLiteralContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public EnumLiteralContext(ParserRuleContext parent, int invokingState, EEnum eenum, int value) {
			super(parent, invokingState);
			this.eenum = eenum;
			this.value = value;
		}
		@Override public int getRuleIndex() { return RULE_enumLiteral; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof USEListener ) ((USEListener)listener).enterEnumLiteral(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof USEListener ) ((USEListener)listener).exitEnumLiteral(this);
		}
	}

	public final EnumLiteralContext enumLiteral(EEnum eenum,int value) throws RecognitionException {
		EnumLiteralContext _localctx = new EnumLiteralContext(_ctx, getState(), eenum, value);
		enterRule(_localctx, 4, RULE_enumLiteral);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63); ((EnumLiteralContext)_localctx).lit = match(ID);

			    EEnumLiteral literal = EcoreFactory.eINSTANCE.createEEnumLiteral();
			    literal.setName(((EnumLiteralContext)_localctx).lit.getText());
			    literal.setValue(value);
			    eenum.getELiterals().add(literal);

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Class_Context extends ParserRuleContext {
		public EPackage pkg;
		public EClass cls;
		public Token a;
		public Token i;
		public Token superClass;
		public Token sClass;
		public TerminalNode INV(int i) {
			return getToken(USEParser.INV, i);
		}
		public List<Plaintext1Context> plaintext1() {
			return getRuleContexts(Plaintext1Context.class);
		}
		public TerminalNode ATTR() { return getToken(USEParser.ATTR, 0); }
		public AttributeContext attribute(int i) {
			return getRuleContext(AttributeContext.class,i);
		}
		public OperationContext operation(int i) {
			return getRuleContext(OperationContext.class,i);
		}
		public TerminalNode ID(int i) {
			return getToken(USEParser.ID, i);
		}
		public List<OperationContext> operation() {
			return getRuleContexts(OperationContext.class);
		}
		public List<TerminalNode> DOUBLE() { return getTokens(USEParser.DOUBLE); }
		public TerminalNode COMMA(int i) {
			return getToken(USEParser.COMMA, i);
		}
		public List<AttributeContext> attribute() {
			return getRuleContexts(AttributeContext.class);
		}
		public List<TerminalNode> ID() { return getTokens(USEParser.ID); }
		public TerminalNode ABSTRACT() { return getToken(USEParser.ABSTRACT, 0); }
		public TerminalNode INHERIT() { return getToken(USEParser.INHERIT, 0); }
		public List<TerminalNode> COMMA() { return getTokens(USEParser.COMMA); }
		public TerminalNode DOUBLE(int i) {
			return getToken(USEParser.DOUBLE, i);
		}
		public TerminalNode END() { return getToken(USEParser.END, 0); }
		public TerminalNode CLASS() { return getToken(USEParser.CLASS, 0); }
		public TerminalNode OPS() { return getToken(USEParser.OPS, 0); }
		public TerminalNode CONSTR() { return getToken(USEParser.CONSTR, 0); }
		public List<TerminalNode> INV() { return getTokens(USEParser.INV); }
		public Plaintext1Context plaintext1(int i) {
			return getRuleContext(Plaintext1Context.class,i);
		}
		public Class_Context(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public Class_Context(ParserRuleContext parent, int invokingState, EPackage pkg) {
			super(parent, invokingState);
			this.pkg = pkg;
		}
		@Override public int getRuleIndex() { return RULE_class_; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof USEListener ) ((USEListener)listener).enterClass_(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof USEListener ) ((USEListener)listener).exitClass_(this);
		}
	}

	public final Class_Context class_(EPackage pkg) throws RecognitionException {
		Class_Context _localctx = new Class_Context(_ctx, getState(), pkg);
		enterRule(_localctx, 6, RULE_class_);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{

			    List<String> superClasses = new ArrayList<String>();

			setState(68);
			_la = _input.LA(1);
			if (_la==ABSTRACT) {
				{
				setState(67); ((Class_Context)_localctx).a = match(ABSTRACT);
				}
			}

			setState(70); match(CLASS);
			setState(71); ((Class_Context)_localctx).i = match(ID);
			setState(83);
			_la = _input.LA(1);
			if (_la==INHERIT) {
				{
				setState(72); match(INHERIT);
				setState(73); ((Class_Context)_localctx).superClass = match(ID);
				superClasses.add(((Class_Context)_localctx).superClass.getText());
				setState(80);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(75); match(COMMA);
					setState(76); ((Class_Context)_localctx).sClass = match(ID);
					superClasses.add(((Class_Context)_localctx).sClass.getText());
					}
					}
					setState(82);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}


			EClass cls = EcoreFactory.eINSTANCE.createEClass();
			cls.setName(((Class_Context)_localctx).i.getText());
			pkg.getEClassifiers().add(cls);

			if (!superClasses.isEmpty()) {
			    EClass eSuperClass = (EClass) pkg.getEClassifier(((Class_Context)_localctx).superClass.getText());
			    cls.getESuperTypes().add(eSuperClass);
			}
			if (((Class_Context)_localctx).a != null) {
			    cls.setAbstract(true);
			}
			setState(93);
			_la = _input.LA(1);
			if (_la==ATTR) {
				{
				setState(86); match(ATTR);
				setState(90);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==ID) {
					{
					{
					setState(87); attribute(pkg, cls);
					}
					}
					setState(92);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(102);
			_la = _input.LA(1);
			if (_la==OPS) {
				{
				setState(95); match(OPS);
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==ID) {
					{
					{
					setState(96); operation(pkg, cls);
					}
					}
					setState(101);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(116);
			_la = _input.LA(1);
			if (_la==CONSTR) {
				{
				setState(104); match(CONSTR);
				setState(113);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==INV) {
					{
					{
					setState(105); match(INV);
					setState(107);
					_la = _input.LA(1);
					if (_la==ID) {
						{
						setState(106); match(ID);
						}
					}

					setState(109); match(DOUBLE);
					setState(110); plaintext1();
					}
					}
					setState(115);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(118); match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttributeContext extends ParserRuleContext {
		public EPackage pkg;
		public EClass cls;
		public Token attrName;
		public Token attrType;
		public List<TerminalNode> ID() { return getTokens(USEParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(USEParser.ID, i);
		}
		public TerminalNode DOUBLE() { return getToken(USEParser.DOUBLE, 0); }
		public AttributeContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public AttributeContext(ParserRuleContext parent, int invokingState, EPackage pkg, EClass cls) {
			super(parent, invokingState);
			this.pkg = pkg;
			this.cls = cls;
		}
		@Override public int getRuleIndex() { return RULE_attribute; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof USEListener ) ((USEListener)listener).enterAttribute(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof USEListener ) ((USEListener)listener).exitAttribute(this);
		}
	}

	public final AttributeContext attribute(EPackage pkg,EClass cls) throws RecognitionException {
		AttributeContext _localctx = new AttributeContext(_ctx, getState(), pkg, cls);
		enterRule(_localctx, 8, RULE_attribute);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(120); ((AttributeContext)_localctx).attrName = match(ID);
			setState(121); match(DOUBLE);
			setState(122); ((AttributeContext)_localctx).attrType = match(ID);

			        EAttribute attr = EcoreFactory.eINSTANCE.createEAttribute();
			        // always add to container first
			        cls.getEStructuralFeatures().add(attr);
			        attr.setName(((AttributeContext)_localctx).attrName.getText());
			        EClassifier type = null;
			        Boolean _setType = true;
			        switch (((AttributeContext)_localctx).attrType.getText())
			        {
			            case "Integer":
			                type = EcorePackage.Literals.EINT;
			                break;
			            case "Real":
			                System.out.println("WARNING: The class \'" + cls.getName() + "\' has a Real attribute "
			                    + "called \'" + ((AttributeContext)_localctx).attrName.getText() + "\' which will be added as EINT, please doublecheck the class!"
			                );
			                type = EcorePackage.Literals.EINT;
			                break;
			            case "String":
			                type = EcorePackage.Literals.ESTRING;
			                break;
			            case "Boolean":
			                type = EcorePackage.Literals.EBOOLEAN;
			                break;
			            default:
			                type = _localctx.pkg.getEClassifier(((AttributeContext)_localctx).attrType.getText());
			                if (type == null)
			                {
			                    _setType = false;
			                }
			                break;
			        }
			        if (_setType) attr.setEType(type);

			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperationContext extends ParserRuleContext {
		public EPackage pkg;
		public EClass cls;
		public Token opName;
		public Token opType;
		public List<TerminalNode> SEMICOLON() { return getTokens(USEParser.SEMICOLON); }
		public List<PlaintextContext> plaintext() {
			return getRuleContexts(PlaintextContext.class);
		}
		public List<PreconditionContext> precondition() {
			return getRuleContexts(PreconditionContext.class);
		}
		public OperationParameterContext operationParameter(int i) {
			return getRuleContext(OperationParameterContext.class,i);
		}
		public TerminalNode ID(int i) {
			return getToken(USEParser.ID, i);
		}
		public TerminalNode LPAR() { return getToken(USEParser.LPAR, 0); }
		public PreconditionContext precondition(int i) {
			return getRuleContext(PreconditionContext.class,i);
		}
		public TerminalNode DOUBLE() { return getToken(USEParser.DOUBLE, 0); }
		public TerminalNode COMMA(int i) {
			return getToken(USEParser.COMMA, i);
		}
		public List<TerminalNode> ID() { return getTokens(USEParser.ID); }
		public TerminalNode EQUALS() { return getToken(USEParser.EQUALS, 0); }
		public List<OperationParameterContext> operationParameter() {
			return getRuleContexts(OperationParameterContext.class);
		}
		public List<TerminalNode> COMMA() { return getTokens(USEParser.COMMA); }
		public TerminalNode BEGIN() { return getToken(USEParser.BEGIN, 0); }
		public TerminalNode END() { return getToken(USEParser.END, 0); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(USEParser.SEMICOLON, i);
		}
		public TerminalNode RPAR() { return getToken(USEParser.RPAR, 0); }
		public PostconditionContext postcondition(int i) {
			return getRuleContext(PostconditionContext.class,i);
		}
		public PlaintextContext plaintext(int i) {
			return getRuleContext(PlaintextContext.class,i);
		}
		public List<PostconditionContext> postcondition() {
			return getRuleContexts(PostconditionContext.class);
		}
		public OperationContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public OperationContext(ParserRuleContext parent, int invokingState, EPackage pkg, EClass cls) {
			super(parent, invokingState);
			this.pkg = pkg;
			this.cls = cls;
		}
		@Override public int getRuleIndex() { return RULE_operation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof USEListener ) ((USEListener)listener).enterOperation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
